Add support for multiple OS
Adds support for linux, windows, and darwin.

--- a/templates/lib.tmpl
+++ b/templates/lib.tmpl
@@ -14,7 +14,7 @@ var (
 {{- end }}
 )
 
-func Register(libHandle uintptr) {
+func register(libHandle uintptr) {
 	handle = libHandle
 {{- range .Functions }}
 	purego.RegisterLibFunc(&{{ .CFunc }}, handle, "{{ .CName }}")
